# imfcs-output-handler

./: .gitignore  LICENSE  README.md  pyproject.toml
notebook/: 01_batch_screening.ipynb  02_unit-test.ipynb  BatchScreening.ipynb  ShowSingle.ipynb
src/imfcsoutputhandlerlib/: all_image.py  display_analysis.py  error_output_manager.py  getter.py  image_info.py  imfcs_output_data_loader.py  imfcs_selector_app.py  imfcs_selector_gui.py  imfcs_selector_logic.py  imfcs_selector_process.py  plotter.py  roi_selector.py  util_filename.py
src/imfcsoutputhandlerlib/analysis/: fcs_metrics.py
src/imfcsoutputhandlerlib/cli/: version_check.py
src/imfcsoutputhandlerlib/core/: all_image.py  image_info.py
src/imfcsoutputhandlerlib/imfcs_util/: extract_excel_psf.py  saved_excel_reader.py
src/imfcsoutputhandlerlib/io/: __init__.py
src/imfcsoutputhandlerlib/screener/: __init__.py  app.py  gui.py  gui_components.py  loader.py  logic.py  process.py
src/imfcsoutputhandlerlib/utils/: filename_utils.py
src/imfcsoutputhandlerlib/visualization/: display_analysis.py  plotter.py
